# ros2-assignment-ros2-c-parameters-vijayakkala06-design

./: .gitignore  CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_parameters/lib/ros2_parameters/: param_node
install/ros2_parameters/share/ament_index/resource_index/parent_prefix_path/: ros2_parameters
install/ros2_parameters/share/ros2_parameters/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: param_node.cpp
